operator clean-up

--- a/common/operator.tex
+++ b/common/operator.tex
@@ -619,7 +619,7 @@ Let $\opair{\clLxy}{\normopn}$ be the normed space of linear operators
 over the normed linear spaces
 $\spX\eqd\normspaceX$ and $\spY\eqd\normspaceY$.
 \propbox{\begin{array}{>{\qquad}F>{\ds}rc>{\ds}l @{\qquad}C @{\qquad}D @{\qquad}D}
-  \mc{7}{M}{The functional $\normopn$ is a \hib{norm} on $\clLxy$. In particular,}
+  \mc{7}{M}{The functional $\normopn$ is a \fnctb{norm} on $\clLxy$. In particular,}
   \\
     1.&\normop{\opA}        &\ge&   0
     & \forall \opA\in\clLxy
@@ -1019,7 +1019,7 @@ $\spX\eqd\normspaceX$ and $\spY\eqd\normspaceY$.%
 \label{def:norm_adjoint}
 \label{def:adjoint}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\spXd$ be the \structe{topological dual space}\ifsxref{vstopo}{def:spXd} of $\spX$.
 \defbox{\begin{array}{M}
     $\opBa$ is the \opd{adjoint} of an operator $\opB\in\clBxy$ if\\
@@ -1036,7 +1036,7 @@ Let $\spXd$ be the \structe{topological dual space}\ifsxref{vstopo}{def:spXd} of
   }
 \label{thm:op_adjoint}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on \structe{normed linear spaces} $\spX$ and $\spY$.
 \thmbox{\begin{array}{rcl@{\qquad}C}
   (\opA\addo  \opB)^\ast &=& \opAa \addo \opBa & \forall \opA,\opB\in\clBxy \\
   (\lambda\opA)^\ast &=& \lambda\opAa  & \forall \opA,\opB\in\clBxy \\
@@ -1087,7 +1087,7 @@ Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $
   \citerpg{rudinf}{98}{0070542252}
   }
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opBa$ be the adjoint of an operator $\opB$.
 \thmbox{
   \normop{\opB} = \normop{\opBa}
@@ -1367,7 +1367,7 @@ Let $\spO\eqd\linearspaceX$ be a linear space.
   \citerpgc{rudinf}{310}{0070542252}{Theorem 12.7, Corollary}
   }
 %---------------------------------------
-Let $\opA,\opB\in\clBxx$ be bounded linear operators on an inner product space $\spX\eqd\inprodspaceX$.
+Let $\opA,\opB\in\clBxx$ be \structe{bounded linear operators} on an inner product space $\spX\eqd\inprodspaceX$.
 \thmbox{\begin{array}{rclC @{\qquad}c@{\qquad} rclC}
   \inprod{\opB\vx}{\vx}&=&0 &\forall \vx\in\setX
   &\iff&
@@ -1439,20 +1439,18 @@ Let $\opA,\opB\in\clBxx$ be bounded linear operators on an inner product space $
 \subsection{Operator adjoint}
 %=======================================
 A fundamental concept of operators on inner product spaces is the
-\hie{operator adjoint} (\prefp{prop:op_adjoint}).
+\hie{operator adjoint} \xref{prop:op_adjoint}.
 The adjoint of an operator is a kind of generalization of the conjugate
 of a complex number in that
 \begin{liste}
-  \item Both are \hie{star-algebras} (\prefp{thm:op_star}).
-  \item Both support decomposition into ``real" and ``imaginary" parts\ifdochas{normalg}{ (\prefp{thm:nalg_re_im})}.
+  \item Both are \structe{star-algebras} \xref{thm:op_star}.
+  \item Both support decomposition into ``real" and ``imaginary" parts \xref{thm:nalg_re_im}.
 \end{liste}
 Structurally, the operator adjoint provides a convenient symmetric relationship
-between the \hie{range space} and \hie{null space} of an operator
-(\prefp{thm:oppN_oppR}).
+between the \hie{range space} and \hie{null space} of an operator \xref{thm:oppN_oppR}.
 
 %---------------------------------------
 \begin{proposition}
-\label{prop:op_adjoint}
 \footnote{
   \citerpg{michel1993}{220}{048667598X},
   \citerpg{rudinf}{311}{0070542252},
@@ -1462,13 +1460,13 @@ between the \hie{range space} and \hie{null space} of an operator
   \citorp{vonNeumann1929}{49},
   \citorp{stone1932}{41}
   }
+\label{prop:op_adjoint}
 %---------------------------------------
-Let $\clBhh$ be the space of bounded linear operators on a Hilbert space $\spH$.\footnote{%
-  \structe{bounded operator}: \prefpp{def:clB}; 
-  \structe{adjoint}:          \prefpp{def:norm_adjoint}
-  }
+Let $\clBhh$ be the space of \structe{bounded linear operators} \xref{def:clB}
+on a \structe{Hilbert space} $\spH$.
+%  \structe{adjoint}:          \prefpp{def:norm_adjoint}
 \propbox{\begin{array}{l@{\qquad}l}
-  \mc{2}{l}{\text{An operator $\opBa$ is the \structe{adjoint} of $\opB\in\clBhh$ if}}\\
+  \mc{2}{l}{\text{An operator $\opBa$ is the \opd{adjoint} of $\opB\in\clBhh$ if}}\\
   \qquad\inprod{\opB\vx}{\vy} = \inprod{\vx}{\opBa\vy} \qquad \forall \vx,\vy\in\spH.
 \end{array}}
 \end{proposition}
@@ -1493,14 +1491,14 @@ Let $\clBhh$ be the space of bounded linear operators on a Hilbert space $\spH$.
 \begin{example}[Matrix algebra: $\opAa=\opA^H$]
 \index{adjoint}
 %---------------------------------------
-In matrix algebra,
-\exbox{\begin{tabular}{>{$\imark\quad$}l}
-  The inner product operation $\inprod{\vx}{\vy}$ is represented by
-         $\vy^H \vx$.  \\
-  The linear operator is represented as a matrix $\vA$. \\
-  The operation of $\vA$ on vector $\vx$ is represented as $\vA\vx$. \\
-  The adjoint of matrix $\vA$ is the Hermitian matrix $\vA^H$.
-  \end{tabular}}
+\exboxt{
+  In matrix algebra (``linear algebra")
+  \\\indentx$\begin{array}{cMl}
+      \imark & The inner product operation $\inprod{\vx}{\vy}$ is represented by & $\vy^H \vx$.
+    \\\imark & The linear operator is represented as a matrix                   & $\vA$.
+    \\\imark & The operation of $\vA$ on a vector $\vx$ is represented as       & $\vA\vx$.
+    \\\imark & The adjoint of matrix $\vA$ is the Hermitian matrix              & $\vA^H$.
+  \end{array}$}
 \end{example}
 \begin{proof}
 \begin{align*}
@@ -1535,7 +1533,7 @@ In matrix algebra,
 
 
 Structures that satisfy the four conditions of the next theorem are known as
-\structe{*-algebras} (``\hie{star-algebras}"\ifdochas{normalg}{, \prefp{def:star_algebra}}).
+\structe{*-algebras} (``\hie{star-algebras}" \xref{def:star_algebra}.
 Other structures which are *-algebras include
 the \structe{field of complex numbers} $\C$ and
 any \structe{ring of complex square $n\times n$ matrices}.\footnote{\citerpg{sakai}{1}{3540636331}}
@@ -1547,7 +1545,7 @@ any \structe{ring of complex square $n\times n$ matrices}.\footnote{\citerpg{sak
   }
 \label{thm:op_star}
 %---------------------------------------
-Let $\spH$ be a Hilbert space with operators $\opA,\opB\in\clBhh$ and
+Let $\spH$ be a \structe{Hilbert space} with operators $\opA,\opB\in\clBhh$ and
 with adjoints $\opAa,\opBa\in\clBhh$.
 Let $\bar{\alpha}$ be the complex conjugate of some $\alpha\in\C$.
 \thmbox{\begin{array}{>{\qquad\scy}rrcl@{\qquad}C@{\qquad}D@{\qquad}D}
@@ -1675,7 +1673,7 @@ and $\oppI(\opL)$ the \hie{image set} of $\opL$ in $\clOxy$\ifsxref{relation}{de
 \index{operator!projection}
 \index{projection operator}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opP$ be a bounded linear operator in $\clBxy$.
 \defbox{\text{
   $\opP$ is a \opd{projection} operator if \quad $\opP^2=\opP$.
@@ -1689,7 +1687,7 @@ Let $\opP$ be a bounded linear operator in $\clBxy$.
   \citerppg{michel1993}{120}{121}{048667598X}
   }
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opP$ be a bounded linear operator in $\clBxy$
 with \hie{null space} $\oppN(\opP)$ and \hie{image set} $\oppI(\opP)$\ifsxref{relation}{def:rel_null}.
 %\footnote{%
@@ -1737,7 +1735,7 @@ with \hie{null space} $\oppN(\opP)$ and \hie{image set} $\oppI(\opP)$\ifsxref{re
   \citerpg{michel1993}{121}{048667598X}
   }
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opP$ be a bounded linear operator in $\clBxy$.
 \thmbox{
   \mcom{\opP^2=\opP}{$\opP$ is a projection operator}
@@ -1773,65 +1771,60 @@ Let $\opP$ be a bounded linear operator in $\clBxy$.
 \end{align*}
 \end{proof}
 
-%%---------------------------------------
-%\begin{theorem}
-%\footnote{
-%  \citerpg{rudinf}{314}{0070542252}
-%  }
-%%---------------------------------------
-%Let $\spH$ be a Hilbert space and $\opP$ an operator in $\clOhh$
-%with adjoint $\opPa$, \hie{null space} $\oppN(\opP)$, and \hie{image set} $\oppI(\opP)$.%
-%\footnote{%
-%  \begin{tabular}{ll}
-%    \structe{null space}: & \prefp{def:rel_null} \\
-%    \structe{image set}:  & \prefp{def:rel_image}
-%  \end{tabular}}
-%\thmbox{\begin{array}{>{\quad}F rcl CDc}
-%  \mc{7}{M}{If $\opP$ is a \structe{projection operator}, then the following are equivalent:}\\
-%  \cnto & \opPa     &=& \opP
-%        &
-%        &($\opP$ is \prope{self-adjoint})
-%        & \iff
-%  \cntn & \opPa\opP &=& \opP\opPa
-%        &
-%        &($\opP$ is \prope{normal})
-%        & \iff
-%  \cntn & \oppI(\opP) &=& \oppN(\opP)^\perp
-%        &
-%        &
-%        & \iff
-%  \cntn & \inprod{\opP\vx}{\vx} &=& \norm{\opP\vx}^2
-%        & \forall \vx\in\setX
-%        &
-%        &
-%  \end{array}}
-%\end{theorem}
-%\begin{proof}
-%This proof is incomplete at this time. \problem
-%\begin{align*}
-%\intertext{Proof that (1)$\implies$(2):}
-%  \opPa\opP
-%    &= \opP^{\ast\ast}\opPa
-%    && \text{by (1)}
-%  \\&= \opP\opPa
-%    && \text{by \prefp{thm:op_star}}
-%  \\
-%\intertext{Proof that (1)$\implies$(3):}
-%  \oppI(\opP)
-%    &= \oppN(\opPa)^\perp
-%    && \text{by \prefp{thm:oppN_oppR}}
-%  \\&= \oppN(\opP)^\perp
-%    && \text{by (1)}
-%  \\
-%\intertext{Proof that (3)$\implies$(4):}
-%\intertext{Proof that (4)$\implies$(1):}
-%\end{align*}
-%\end{proof}
-%
-
-
-
-
+%---------------------------------------
+\begin{theorem}
+\footnote{
+  \citerpg{rudinf}{314}{0070542252}
+  }
+%---------------------------------------
+Let $\spH$ be a \structe{Hilbert space} and $\opP$ an operator in $\clOhh$
+with adjoint $\opPa$, \hie{null space} $\oppN(\opP)$, and \hie{image set} $\oppI(\opP)$.%
+\footnote{%
+  \begin{tabular}{ll}
+    \structe{null space}: & \prefp{def:rel_null} \\
+    \structe{image set}:  & \prefp{def:rel_image}
+  \end{tabular}}
+\thmbox{\begin{array}{>{\quad}F rcl CDc}
+  \mc{7}{M}{If $\opP$ is a \structe{projection operator}, then the following are equivalent:}\\
+  \cnto & \opPa     &=& \opP
+        &
+        &($\opP$ is \prope{self-adjoint})
+        & \iff
+  \cntn & \opPa\opP &=& \opP\opPa
+        &
+        &($\opP$ is \prope{normal})
+        & \iff
+  \cntn & \oppI(\opP) &=& \oppN(\opP)^\perp
+        &
+        &
+        & \iff
+  \cntn & \inprod{\opP\vx}{\vx} &=& \norm{\opP\vx}^2
+        & \forall \vx\in\setX
+        &
+        &
+  \end{array}}
+\end{theorem}
+\begin{proof}
+This proof is incomplete at this time. \problem
+\begin{align*}
+\intertext{Proof that (1)$\implies$(2):}
+  \opPa\opP
+    &= \opP^{\ast\ast}\opPa
+    && \text{by (1)}
+  \\&= \opP\opPa
+    && \text{by \prefp{thm:op_star}}
+  \\
+\intertext{Proof that (1)$\implies$(3):}
+  \oppI(\opP)
+    &= \oppN(\opPa)^\perp
+    && \text{by \prefp{thm:oppN_oppR}}
+  \\&= \oppN(\opP)^\perp
+    && \text{by (1)}
+  \\
+\intertext{Proof that (3)$\implies$(4):}
+\intertext{Proof that (4)$\implies$(1):}
+\end{align*}
+\end{proof}
 
 %=======================================
 \subsection{Self Adjoint Operators}
@@ -1840,13 +1833,13 @@ Let $\opP$ be a bounded linear operator in $\clBxy$.
 \begin{definition}
   \footnote{
     Historical works regarding self-adjoint operators:
-    \quad  \citorp{vonNeumann1929}{49},
-    \qquad ``linearer Operator R selbstadjungiert oder Hermitesch",
-    \quad  \citorpc{stone1932}{50}{``self-adjoint transformations"}
+    \citerp{vonNeumann1929}{49},
+    ``linearer Operator R selbstadjungiert oder Hermitesch",
+    \citerpc{stone1932}{50}{``self-adjoint transformations"}
     }
 \label{def:op_selfadj}
 %---------------------------------------
-Let $\opB\in\clBhh$ be a bounded operator with adjoint $\opBa$ on a Hilbert space $\spH$.
+Let $\opB\in\clBhh$ be a \prope{bounded} operator with adjoint $\opBa$ on a \structe{Hilbert space} $\spH$.
 \defbox{
   \text{The operator $\opB$ is said to be \propd{self-adjoint} or \propd{hermitian} if $\opB\eqo\opBa$}.
   }
@@ -1866,34 +1859,31 @@ Let $\fx(t)$ be a random process with autocorrelation
 \exbox{
   \opR = \opRa
   \qquad
-  \text{(The autocorrelation operator $\opR$ is \prope{self-adjoint})}
+  \text{(The auto-correlation operator $\opR$ is \prope{self-adjoint})}
   }
 \end{example}
-\begin{proof}
-\begin{align*}
-  \intertext{1. First note that the \structe{autocorrelation kernel} $\Rxx(t,u)$ is \prope{hermitian symmetric}:}
-      \Rxx(t,u)
-        &\eqd \pE  \fx(t) \fx^\ast(u)
-         =     [\pE \fx^\ast(t) \fx(u)]^\ast
-         =     [\pE \fx(u) \fx^\ast(t)]^\ast
-      \\&=     \Rxx^\ast(u,t)
-  \intertext{2. Proof that the \structe{autocorrelation operator} $\opR$ is \prope{self-adjoint}:}
-      \inprod{\opR \ff}{\fg}
-        &= \inprod{\int_{u\in\R}\Rxx(t,u) \ff(u) \du}{\fg(t)}
-        && \text{by definition of $\opR$}
-      \\&= \int_{u\in\R}\ff(u) \inprod{\Rxx(t,u) }{\fg(t)} \du
-      \\&= \int_{u\in\R}\ff(u) \int_t \Rxx(t,u) \fg^\ast(t) \dt \du
-      \\&= \int_{u\in\R}\ff(u) \int_t \Rxx^\ast(u,t) \fg^\ast(t) \dt \du
-        && \text{by 1.}
-      \\&= \int_{u\in\R}\ff(u) \left[\int_t \Rxx(u,t) \fg(t) \dt\right]^\ast \du
-      \\&= \int_{u\in\R}\ff(u) \left[\opR \fg \right]^\ast \du
-        && \text{by definition of $\opR$}
-      \\&= \inprod{ \ff}{\opR \fg}
-  \end{align*}
-\end{proof}
-
-
-
+%20190731%\begin{proof}
+%20190731%\begin{align*}
+%20190731%  \intertext{1. First note that the \structe{autocorrelation kernel} $\Rxx(t,u)$ is \prope{hermitian symmetric}:}
+%20190731%      \Rxx(t,u)
+%20190731%        &\eqd \pE  \fx(t) \fx^\ast(u)
+%20190731%         =     [\pE \fx^\ast(t) \fx(u)]^\ast
+%20190731%         =     [\pE \fx(u) \fx^\ast(t)]^\ast
+%20190731%      \\&=     \Rxx^\ast(u,t)
+%20190731%  \intertext{2. Proof that the \structe{autocorrelation operator} $\opR$ is \prope{self-adjoint}:}
+%20190731%      \inprod{\opR \ff}{\fg}
+%20190731%        &= \inprod{\int_{u\in\R}\Rxx(t,u) \ff(u) \du}{\fg(t)}
+%20190731%        && \text{by definition of $\opR$}
+%20190731%      \\&= \int_{u\in\R}\ff(u) \inprod{\Rxx(t,u) }{\fg(t)} \du
+%20190731%      \\&= \int_{u\in\R}\ff(u) \int_t \Rxx(t,u) \fg^\ast(t) \dt \du
+%20190731%      \\&= \int_{u\in\R}\ff(u) \int_t \Rxx^\ast(u,t) \fg^\ast(t) \dt \du
+%20190731%        && \text{by 1.}
+%20190731%      \\&= \int_{u\in\R}\ff(u) \left[\int_t \Rxx(u,t) \fg(t) \dt\right]^\ast \du
+%20190731%      \\&= \int_{u\in\R}\ff(u) \left[\opR \fg \right]^\ast \du
+%20190731%        && \text{by definition of $\opR$}
+%20190731%      \\&= \inprod{ \ff}{\opR \fg}
+%20190731%  \end{align*}
+%20190731%\end{proof}
 
 %---------------------------------------
 \begin{theorem}
@@ -1904,29 +1894,25 @@ Let $\fx(t)$ be a random process with autocorrelation
   \citerpp{keener}{114}{119}
   }
 %---------------------------------------
-Let $\opS:\spH\to\spH$ be an operator over a Hilbert space $\spH$
+Let $\opS:\spH\to\spH$ be an operator over a \structe{Hilbert space} $\spH$
 with eigenvalues $\{\lambda_n\}$ and eigenfunctions $\{\fpsi_n\}$
 such that $\opS \fpsi_n = \lambda_n\fpsi_n$ and let
 $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.
 \thmbox{
-  \mcom{\opS = \opSa}{$\opS$ is \prope{self adjoint}}
+  \brb{\mcom{\opS = \opSa}{$\opS$ is \propb{self adjoint}}}
   \implies
-  \left\{\begin{array}{rlp{52mm}}
+  \brb{\begin{array}{DlD}
     1. & \inprod{\opS\vx}{\vx}\in\R
-       & {\scs
-         (the hermitian quadratic form of $\opS$ is real)}
+       & (the hermitian quadratic form of $\opS$ is \prope{real-valued})
        \\
     2. & \lambda_n \in \R
-       & {\scs
-         (eigenvalues of $\opS$ are real)}
+       & (eigenvalues of $\opS$ are \prope{real-valued})
        \\
     3. & \lambda_n\ne \lambda_m\implies\inprod{\psi_n}{\psi_m}=0
-       & {\scs
-         (eigenfunctions associated with distinct eigenvalues are orthogonal)}
-  \end{array}\right.
+       & (eigenvectors are \prope{orthogonal})
+  \end{array}}
 }
 \end{theorem}
-
 \begin{proof}
   \begin{align*}
     \intertext{1. Proof that $\opS=\opSa  \implies  \inprod{\opS\vx}{\vx}\in\R$:}
@@ -1974,8 +1960,6 @@ $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.
 \end{align*}
 \end{proof}
 
-
-
 %=======================================
 \subsection{Normal Operators}
 %=======================================
@@ -1985,21 +1969,20 @@ $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.
   \citerpg{rudinf}{312}{0070542252},
   \citerpg{michel1993}{431}{048667598X},
   \citerp{dieudonne1969}{167},
-  \citor{frobenius1878},
-  \citorp{frobenius1878b}{391}
+  \citer{frobenius1878},
+  \citerp{frobenius1878b}{391}
   }
 \label{def:op_normal}
 \index{operator!normal}      \index{normal operator}
 \index{operator!isometric}   \index{isometric operator}
 \index{operator!unitary}     \index{unitary operator}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opNa$ be the adjoint of an operator $\opN\in\clBxy$.
 \defbox{\begin{array}{M rcl}
-  $\opN$ is \hid{normal} if & \opNa\opN &=& \opN\opNa .
+  $\opN$ is \propd{normal} if & \opNa\opN &=& \opN\opNa .
 \end{array}}
 \end{definition}
-
 
 %---------------------------------------
 \begin{theorem}
@@ -2010,7 +1993,7 @@ Let $\opNa$ be the adjoint of an operator $\opN\in\clBxy$.
 \index{operator!normal}
 \index{normal}
 %---------------------------------------
-Let $\clBhh $ be the space of bounded linear operators on a Hilbert space $\spH$.
+Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
 Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
 and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{def:rel_null}.
 %\footnote{\structe{image set}: \prefp{def:rel_null}}
@@ -2063,7 +2046,7 @@ and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{de
 \index{operator!normal}
 \index{normal}
 %---------------------------------------
-Let $\clBhh $ be the space of bounded linear operators on a Hilbert space $\spH$.
+Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
 Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
 and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{def:rel_null}.
 %\footnote{\structe{image set}: \prefp{def:rel_null}}
@@ -2099,7 +2082,7 @@ and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{de
 %\index{operator!normal}
 %\index{normal}
 %%---------------------------------------
-%Let $\clBhh $ be the space of bounded linear operators on a Hilbert space $\spH$.
+%Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
 %Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
 %and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$.
 %\footnote{\structe{image set}: \prefp{def:rel_null}}
@@ -2230,7 +2213,7 @@ equivalent properties.
 \index{operator!isometric}
 \index{isometric operator}
 %---------------------------------------
-Let $\clBxx $ be the space of bounded linear operators on a normed linear space $\spX\eqd\normspaceX$.
+Let $\clBxx $ be the space of \structe{bounded linear operators} on a normed linear space $\spX\eqd\normspaceX$.
 Let $\opN$ be a bounded linear operator in $\clLxx$, and
 $\opI$ the identity operator in $\clLxx$.
 Let $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.
@@ -2352,7 +2335,7 @@ Let $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.
 \index{operator!isometric}
 \index{isometric operator}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opM$ be a bounded linear operator in $\clBxy$, and
 $\opI$ the identity operator in $\clLxx$.
 Let $\Lambda$ be the set of eigenvalues of $\opM$.
@@ -2450,7 +2433,7 @@ and shift operators defined as
 \index{operator!isometric}   \index{isometric operator}
 \index{operator!unitary}     \index{unitary operator}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opU$ be a bounded linear operator in $\clBxy$,
 and $\spI$ the identity operator in $\clBxx$.
 \defbox{\begin{array}{M rcl}
@@ -2463,8 +2446,8 @@ and $\spI$ the identity operator in $\clBxx$.
 \begin{proposition}
 \label{prop:op_unitary_UV}
 %---------------------------------------
-Let $\clBxy $ be the space of bounded linear operators on normed linear spaces $\spX$ and $\spY$.
-Let $\opU$ and $\opV$ be bounded linear operators in $\clBxy$.
+Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
+Let $\opU$ and $\opV$ be \structe{bounded linear operators} in $\clBxy$.
 \propbox{
   \brbr{\begin{array}{MD}
     $\opU$ is \prope{unitary} & and\\
@@ -2507,7 +2490,7 @@ Let $\opU$ and $\opV$ be bounded linear operators in $\clBxy$.
   }
 \index{operator!unitary}
 %---------------------------------------
-Let $\clBhh $ be the space of bounded linear operators on a Hilbert space $\spH$.
+Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
 Let $\opU$ be a bounded linear operator in $\clBhh$,
 and $\oppI(\opU)$ the \structe{image set}\ifsxref{relation}{def:rel_image} of $\opU$.
 \thmbox{\begin{array}{>{\qquad}FlDlDc}
@@ -2584,7 +2567,7 @@ and $\oppI(\opU)$ the \structe{image set}\ifsxref{relation}{def:rel_image} of $\
 \label{thm:unitary_prop}
 \index{operator!unitary}
 %---------------------------------------
-Let $\clBhh $ be the space of bounded linear operators on a Hilbert space $\spH$.
+Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
 Let $\opU$ be a bounded linear operator in $\clBhh$,
     $\oppN(\opU)$ the \structe{null space} of $\opU$,
 and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnote{%
@@ -2996,14 +2979,12 @@ Let $\opP\in\clOxy$ be an operator.
 \index{operator!positive}
 \label{def:op_A>B}
 %---------------------------------------
-Let $\opA,\opB\in\clBxy$ be bounded operators.
-\defbox{\indxs{\ge}
-  \mcom{\opA \ge \opB}{``$\opA$ is greater than or equal to $\opB$"}
-  \quad\iff\quad
-  \mcom{(\opA-\opB)\ge 0}{``$(\opA-\opB)$ is positive"}
+Let $\opA,\opB\in\clBxy$ be \prope{bounded} operators.
+\defboxt{
+  $\ds\opA \ge \opB$ (``$\opA$ is greater than or equal to $\opB$") if
+  \\\indentx$\ds\opA-\opB\ge 0$ (``$(\opA-\opB)$ is positive")
   }
 \end{definition}
-
 } % end wsd exclude
 
 
