random process eigen basis clean-up

--- a/common/operator.tex
+++ b/common/operator.tex
@@ -596,15 +596,12 @@ Let $\clLxy$ be the space of linear operators over normed linear spaces $\spX$ a
       $
     \\
     The pair $\opair{\clLxy}{\normopn}$
-    is the \hid{normed space of linear operators} on $\opair{\spX}{\spY}$.
+    is the \structd{normed space of linear operators} on $\opair{\spX}{\spY}$.
   \end{array}}
 \end{definition}
 
 \pref{prop:op_norm} (next) shows that the functional defined in
-\pref{def:op_norm} (previous) is a \hie{norm}.%
-\ifdochas{vsnorm}{\footnote{
-  \emph{norm} $\normn$: \prefpp{def:norm}
-  }}
+\pref{def:op_norm} (previous) is a \fncte{norm} \xref{def:norm}.
 
 %---------------------------------------
 \begin{proposition}
@@ -1480,7 +1477,8 @@ on a \structe{Hilbert space} $\spH$.
         &\eqd \ff(\opB\vx)
         && \ifdochas{functionals}{\text{by \prefpp{def:functional}}}
       \\&\eqd \opBa\ff(\vx)
-        && \text{by \prefpp{def:norm_adjoint}}
+        && \text{by definition of \ope{operator adjoint}}
+        && \text{\xref{def:norm_adjoint}}
       \\&=    \inprod{\vx}{\opBa\vy}
         && \ifdochas{functionals}{\text{by \prefpp{def:functional}}}
     \end{align*}
@@ -2062,80 +2060,79 @@ and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{de
     &= \set{\vx}{\opNa\vx=0 \quad \forall\vx\in\spX}
     && \text{\ifdochas{relation}{by \ifdochas{relation}{\prefp{def:rel_null}}} (definition of $\oppN$)}
   \\&= \set{\vx}{\norm{\opNa\vx}=0 \quad \forall\vx\in\spX}
-    && \text{by definition of $\normn$ (\prefp{def:norm})}
+    && \text{by definition of $\normn$ \xref{def:norm}}
   \\&= \set{\vx}{\norm{\opN\vx}=0 \quad \forall\vx\in\spX}
 %    && \text{by left hypothesis and \prefp{thm:norm_iff_prop} ($\norm{\opNa\vx}=\norm{\opN\vx}$)}
   \\&= \set{\vx}{\opN\vx=0 \quad \forall\vx\in\spX}
-    && \text{by definition of $\normn$ (\prefp{def:norm})}
+    && \text{by definition of $\normn$ \xref{def:norm}}
   \\&= \oppN(\opN)
     && \text{\ifdochas{relation}{by \ifdochas{relation}{\prefp{def:rel_null}}} (definition of $\oppN$)}
   \end{align*}
 \end{proof}
 
-
-%%---------------------------------------
-%\begin{theorem}
-%\footnote{
-%  \citerppg{rudinf}{312}{313}{0070542252}
-%  }
-%\label{thm:op_norm_prop}
-%\index{operator!normal}
-%\index{normal}
-%%---------------------------------------
-%Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
-%Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
-%and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$.
-%\footnote{\structe{image set}: \prefp{def:rel_null}}
-%\thmbox{
-%  \mcom{\opNa\opN=\opN\opNa}{$\opN$ is normal}
-%  \qquad\implies\qquad
-%  \brbl{\mcom{\lambda_n\ne \lambda_m\implies\inprod{\psi_n}{\psi_m}=0}
-%             {eigenfunctions associated with distinct eigenvalues are orthogonal}
-%       }
-%  }
-%\end{theorem}
-%\begin{proof}
-%The proof in (1) is flawed. This implies that (2) is also flawed. [Rudin] claims both to be true.\citep{rudinf}{313} \problem
-%\begin{align*}
-%  \intertext{1. Proof that
-%  $\opNa\opN=\opN\opNa \implies \opNa\fpsi = \lambda^\ast \fpsi$:}
-%  \opN \fpsi
-%    &= \lambda \fpsi
-%  \\\impliedby
-%  \\0
-%    &= \oppN(\opN - \lambda \opI)
-%  \\&= \oppN([\opN - \lambda \opI]^\ast)
-%    && \text{by $\oppN(\opN)=\oppN(\opNa)$}
-%  \\&= \oppN(\opNa - [\lambda \opI]^\ast)
-%    && \text{by \prefp{thm:op_star}}
-%  \\&= \oppN(\opNa - \lambda^\ast \opI^\ast)
-%    && \text{by \prefp{thm:op_star}}
-%  \\&= \oppN(\opNa - \lambda^\ast \opI)
-%  \\\implies
-%  \\(\opNa-\lambda^\ast \opI)\fpsi
-%    &= 0
-%  \\\iff \opNa \fpsi
-%    &= \lambda^\ast \fpsi
-%  \\
-%  \intertext{2. Proof that
-%  $\opNa\opN=\opN\opNa \implies
-%   [\lambda_n\ne \lambda_m\implies\inprod{\psi_n}{\psi_m}=0]
-%  $:}
-%  \lambda_n\inprod{\psi_n}{\psi_m}
-%    &= \inprod{\lambda_n\psi_n}{\psi_m}
-%    && \text{by definition of $\inprodn$ \prefp{def:inprod}}
-%  \\&= \inprod{\opN\psi_n}{\psi_m}
-%    && \text{by definition of eigenpairs}
-%  \\&= \inprod{\psi_n}{\opNa\psi_m}
-%    && \text{by \prefp{prop:op_adjoint} (definition of adjoint)}
-%  \\&= \inprod{\psi_n}{\lambda_m^\ast \psi_m}
-%    && \text{by (4.)}
-%  \\&= \lambda_m \inprod{\psi_n}{\psi_m}
-%    && \text{by definition of $\inprodn$ \prefp{def:inprod}}
-%  \intertext{This implies for $\lambda_n\ne \lambda_m\ne 0$,
-%             $\inprod{\psi_n}{\psi_m}=0$.}
-%  \end{align*}
-%\end{proof}
+%---------------------------------------
+\begin{theorem}
+\footnote{
+  \citerppg{rudinf}{312}{313}{0070542252}
+  }
+\label{thm:op_norm_prop}
+\index{operator!normal}
+\index{normal}
+%---------------------------------------
+Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
+Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
+and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$.
+\footnote{\structe{image set}: \prefp{def:rel_null}}
+\thmbox{
+  \brb{\mcom{\opNa\opN=\opN\opNa}{$\opN$ is normal}}
+  \qquad\implies\qquad
+  \brb{\mcom{\lambda_n\ne \lambda_m\implies\inprod{\psi_n}{\psi_m}=0}
+             {eigenfunctions associated with distinct eigenvalues are orthogonal}
+       }
+  }
+\end{theorem}
+\begin{proof}
+The proof in (1) is flawed. This implies that (2) is also flawed. [Rudin] claims both to be true.\citep{rudinf}{313} \problem
+\begin{align*}
+  \intertext{1. Proof that
+  $\opNa\opN=\opN\opNa \implies \opNa\fpsi = \lambda^\ast \fpsi$:}
+  \opN \fpsi
+    &= \lambda \fpsi
+  \\\impliedby
+  \\0
+    &= \oppN(\opN - \lambda \opI)
+  \\&= \oppN([\opN - \lambda \opI]^\ast)
+    && \text{by $\oppN(\opN)=\oppN(\opNa)$}
+  \\&= \oppN(\opNa - [\lambda \opI]^\ast)
+    && \text{by \prefp{thm:op_star}}
+  \\&= \oppN(\opNa - \lambda^\ast \opI^\ast)
+    && \text{by \prefp{thm:op_star}}
+  \\&= \oppN(\opNa - \lambda^\ast \opI)
+  \\\implies
+  \\(\opNa-\lambda^\ast \opI)\fpsi
+    &= 0
+  \\\iff \opNa \fpsi
+    &= \lambda^\ast \fpsi
+  \\
+  \intertext{2. Proof that
+  $\opNa\opN=\opN\opNa \implies
+   [\lambda_n\ne \lambda_m\implies\inprod{\psi_n}{\psi_m}=0]
+  $:}
+  \lambda_n\inprod{\psi_n}{\psi_m}
+    &= \inprod{\lambda_n\psi_n}{\psi_m}
+    && \text{by definition of $\inprodn$ \prefp{def:inprod}}
+  \\&= \inprod{\opN\psi_n}{\psi_m}
+    && \text{by definition of eigenpairs}
+  \\&= \inprod{\psi_n}{\opNa\psi_m}
+    && \text{by \prefp{prop:op_adjoint} (definition of adjoint)}
+  \\&= \inprod{\psi_n}{\lambda_m^\ast \psi_m}
+    && \text{by (4.)}
+  \\&= \lambda_m \inprod{\psi_n}{\psi_m}
+    && \text{by definition of $\inprodn$ \prefp{def:inprod}}
+  \intertext{This implies for $\lambda_n\ne \lambda_m\ne 0$,
+             $\inprod{\psi_n}{\psi_m}=0$.}
+  \end{align*}
+\end{proof}
 
 %=======================================
 \subsection{Isometric operators}
@@ -2146,7 +2143,7 @@ if it is an \structe{isometry}. % \xrefP{def:isometry}.
 \begin{definition}
 \label{def:op_isometric}
 %--------------------------------------
-Let $\normspaceX$ and $\normspaceY$ be \structe{normed linear spaces} \xrefP{def:norm}.
+Let $\normspaceX$ and $\normspaceY$ be \structe{normed linear spaces} \xref{def:norm}.
 \defbox{\begin{array}{M}
   An operator $\opM\in\clLxy$ is \hid{isometric} if
   \\\qquad$\ds\norm{\opM\vx}= \norm{\vx} \qquad\scy \forall \vx\in\setX$.
